Fix some layout issues

--- a/data/css/global-settings.css
+++ b/data/css/global-settings.css
@@ -941,7 +941,7 @@ print {
     width: 0.01px;
   }
   #u2198 {
-    margin-left: 461px;
+    margin-left: 100px;
     margin-top: 28px;
   }
   #u2144 {
