--- a/data/css/program-selector.css
+++ b/data/css/program-selector.css
@@ -73,7 +73,7 @@ th, td {
 
 #u840-4 {
   border-radius: 10px;
-  color: #FBB03B;
+  color: #000000;
   background-color: #F15A24;
   min-height: 57px;
   border-width: 2px;
@@ -109,7 +109,7 @@ th, td {
 
 #u888-4 {
   border-radius: 10px;
-  color: #FFFFFF;
+  color: #000000;
   background-color: #FF0000;
   min-height: 57px;
   border-width: 2px;
